Deleted unwanted webp file and fixed overflow of image in footer section

--- a/styles.css
+++ b/styles.css
@@ -446,7 +446,7 @@ ul li a:hover{
     border-radius: 7px;
 }
 .image3 img{
-    height: 23.7rem;
+    height: 21.7rem;
     width: 19rem;
     object-fit: cover;
     /* margin-left: 21px; */
